General refactor
- Change Map implementation from HashMap to LinkedHashMap
- Solve some null exceptions
- Fix some errors

hange Map implementation from HashMap to LinkedHashMap
- Solve some null exceptions
- Fix some errors