@@ -2,6 +2,7 @@ package repositories;
 
 import java.util.ArrayList;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import models.Task;
 import utils.DataBaseConnection;
 import utils.UserLogin;
@@ -17,7 +18,7 @@ public class TaskRepository extends DataBaseRepositoryImpl implements IRepositor
     return (ArrayList<Task>)
         this.connection.getTasks().stream()
             .filter(t -> t.getUser().equals(UserLogin.getUser()))
-            .toList();
+            .collect(Collectors.toList());
   }
 
   @Override
